--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,5 @@ set(CMAKE_C_STANDARD 23)
 
 add_library(GpuMonitor SHARED library.c
         nvidia/nvidia_gpu.c)
+
+include_directories(/usr/local/cuda/include)
