--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(GpuMonitor C)
 set(CMAKE_C_STANDARD 23)
 
 add_library(GpuMonitor SHARED library.c
-        nvidia/nvidia_gpu.c)
+        nvidia/vram_info.c
+        nvidia/cuda_info.c
+        nvidia/tensor_info.c)
 
 include_directories(/usr/local/cuda/include)
