--- a/.github/workflows/build_library.yml
+++ b/.github/workflows/build_library.yml
@@ -19,6 +19,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    
+    - name: cuda-toolkit
+      uses: Jimver/cuda-toolkit@v0.2.18
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
