--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 3.29)
 project(GpuMonitor C)
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake /home/kelvin/Application/JetBrains/clion/bin/cmake/linux/x64/share/cmake-3.29/Modules)
+# Set custom cmake module path here
+set(MY_CMAKE_MODULE_PATH "/home/kelvin/Application/JetBrains/clion/bin/cmake/linux/x64/share/cmake-3.29/Modules")
+
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${MY_CMAKE_MODULE_PATH})
 
 set(CMAKE_C_STANDARD 23)
 
@@ -12,4 +15,4 @@ add_library(GpuMonitor SHARED library.c
 
 include_directories(/usr/local/cuda/include)
 find_package(CUDA REQUIRED)
-target_link_libraries(GpuMonitor ${CUDA_LIBRARIES})
+target_link_libraries(GpuMonitor ${CUDA_LIBRARIES} nvidia-ml)
