AMD VRAM Functions & modified header included

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,10 +12,12 @@ add_library(GpuMonitor SHARED library.c
         nvidia/vram_info.c
         nvidia/processor_info.c
         amd/rocm_smi.h
+        amd/processor_info.c
+        amd/vram_info.c
 )
 
 #Change "/home/usr" to GpuMonitor installation directory
-#!!!!!It's strongly recommended that you should not work with "rocm_smi.h" from your local ROCm lib!!!!!
+#IMPORTANT - It's strongly recommended that you should not work with "rocm_smi.h" from your local ROCm lib!
 include_directories(/usr/local/cuda/include
         /home/usr/GpuMonitor/amd/rocm_smi.h
 )
