--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.29)
 project(GpuMonitor C)
 
 # Set custom cmake module path here
-set(MY_CMAKE_MODULE_PATH "/home/kelvin/Application/JetBrains/clion/bin/cmake/linux/x64/share/cmake-3.29/Modules")
+set(MY_CMAKE_MODULE_PATH "/home/patrick/clion-2024.2.1/bin/cmake/linux/x64/share/cmake-3.29/Modules")
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${MY_CMAKE_MODULE_PATH})
 
@@ -16,15 +16,13 @@ add_library(GpuMonitor SHARED library.c
         amd/vram_info.c
 )
 
-#Change "/home/usr" to GpuMonitor installation directory
-#IMPORTANT - It's strongly recommended that you should not work with "rocm_smi.h" from your local ROCm lib!
-include_directories(/usr/local/cuda/include
-        /home/usr/GpuMonitor/amd/rocm_smi.h
-)
+include_directories(/usr/local/cuda/include)
 
 find_package(CUDA REQUIRED)
 target_link_libraries(GpuMonitor ${CUDA_LIBRARIES} nvidia-ml)
 
-# Change ../rocm-6.1.3/.. to your version
-target_link_libraries(GpuMonitor /opt/rocm-6.1.3/lib/librocm_smi64.so)
+find_package(ROCM REQUIRED)
+target_link_libraries(GpuMonitor ${ROCM_LIBRARIES})
+
+
 
