--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
       run: |
         FIND_CUDA_PATH=$(find /usr -name "FindCUDA.cmake" 2>/dev/null)
         if [ ! -z "$FIND_CUDA_PATH" ]; then
-          sudo sed -i '/cmake_policy(GET CMP0146/,/endif()/d' $FIND_CUDA_PATH
-          sudo sed -i '/if(CMAKE_GENERATOR MATCHES "Visual Studio")/,/endif()/d' $FIND_CUDA_PATH
+          sed -i '/cmake_policy(GET CMP0146/,/endif()/d' $FIND_CUDA_PATH
+          sed -i '/if(CMAKE_GENERATOR MATCHES "Visual Studio")/,/endif()/d' $FIND_CUDA_PATH
         fi
 
     - name: Configure CMake
