--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,17 +19,17 @@ jobs:
 
     - name: Setup ROCm
       run: |
-        wget -q -O - https://repo.radeon.com/rocm/rocm.gpg.key | apt-key add -
-        echo 'deb [arch=amd64] https://repo.radeon.com/rocm/apt/debian/ ubuntu main' | tee /etc/apt/sources.list.d/rocm.list
-        apt-get update
-        apt-get install -y rocm-dev
+        wget -q -O - https://repo.radeon.com/rocm/rocm.gpg.key | sudo apt-key add -
+        echo 'deb [arch=amd64] https://repo.radeon.com/rocm/apt/debian/ ubuntu main' | sudo tee /etc/apt/sources.list.d/rocm.list
+        sudo apt-get update
+        sudo apt-get install -y rocm-dev
 
     - name: Modify FindCUDA.cmake
       run: |
         FIND_CUDA_PATH=$(find /usr -name "FindCUDA.cmake" 2>/dev/null)
         if [ ! -z "$FIND_CUDA_PATH" ]; then
-          sed -i '/cmake_policy(GET CMP0146/,/endif()/d' $FIND_CUDA_PATH
-          sed -i '/if(CMAKE_GENERATOR MATCHES "Visual Studio")/,/endif()/d' $FIND_CUDA_PATH
+          sudo sed -i '/cmake_policy(GET CMP0146/,/endif()/d' $FIND_CUDA_PATH
+          sudo sed -i '/if(CMAKE_GENERATOR MATCHES "Visual Studio")/,/endif()/d' $FIND_CUDA_PATH
         fi
 
     - name: Configure CMake
